Update pjecalc-abrir.sh